--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <meta name="theme-color" content="GREEN">
 </head>
 <body>
+<header>
 <section>
     <aside>
         <span id="blog"><a href="https://tehietulips.blogspot.com/" target="_blank">Techie Tu</a><span id="blog2">lip</span></span>
@@ -32,6 +33,55 @@
             <li><a class="hover-line" href="#contact">Contact</a></li>
         </ul>
     </nav>
+
+    <button id="header-Nav">
+        <i class="fa-solid fa-bars"></i>
+    </button>
 </section>
+</header>
+
+<main>
+
+    <!--home sectioning-->
+    <section id="home">
+        <section>
+            <div>
+                <!--description-->
+                <aside>
+                    <h3>Hello</h3>
+                    <h1><span>I'm</span> Sachini Vinodya</h1>
+                    <h1>a <span class="typing"></span>|</h1>
+
+                    <!--social images-->
+                    <section>
+                        <h3>FIND WITH ME</h3>
+                        <nav>
+                            <div><a href="https://www.facebook.com/nowety.pasan" target="_blank"><i
+                                    class="fa-brands fa-facebook-f"></i></a></div>
+                            <div><a href="https://www.instagram.com/_.shenux._/?hl=en" target="_blank"><i
+                                    class="fa-brands fa-instagram"></i></a></div>
+                            <div><a href="https://lk.linkedin.com/in/pasan-pahasara-356a75165" target="_blank"><i
+                                    class="fa-brands fa-linkedin-in"></i></a></div>
+                            <div><a href="https://twitter.com/PasanPahasara" target="_blank"><i
+                                    class="fa-brands fa-twitter"></i></a></div>
+                            <div><a href="https://github.com/Pasan-Pahasara" target="_blank"><i
+                                    class="fa-brands fa-github"></i></a></div>
+                        </nav>
+                    </section>
+                </aside>
+                <!--image-->
+                <aside>
+                    <div></div>
+                </aside>
+            </div>
+        </section>
+        <div></div>
+        <div></div>
+        <!--        <div>-->
+        <!--            <img src="assets/img/DashLine.svg">-->
+        <!--        </div>-->
+        <div></div>
+    </section>
+
 </body>
 </html>
