--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                         </nav>
                     </section>
                 </aside>
-                <!--image-->
+
                 <aside>
                     <div></div>
                 </aside>
@@ -77,11 +77,8 @@
         </section>
         <div></div>
         <div></div>
-        <!--        <div>-->
-        <!--            <img src="assets/img/DashLine.svg">-->
-        <!--        </div>-->
         <div></div>
     </section>
-
+</main>
 </body>
 </html>
