--- a/index.html
+++ b/index.html
@@ -48,13 +48,12 @@
             <div>
                 <!--description-->
                 <aside>
-                    <h3>Hello</h3>
-                    <h1><span>I'm</span> Sachini Vinodya</h1>
-                    <h1>a <span class="typing"></span>|</h1>
-
+                    <h3>Hello !  I'm </h3>
+                    <h1>S<span class="typing"></span>|</h1>
+                    <h1><span>A</span> Web Designer & Developer | Blogger | Software Engineer student...</h1>
                     <!--social images-->
                     <section>
-                        <h3>FIND WITH ME</h3>
+
                         <nav>
                             <div><a href="https://www.facebook.com/nowety.pasan" target="_blank"><i
                                     class="fa-brands fa-facebook-f"></i></a></div>
@@ -80,5 +79,9 @@
         <div></div>
     </section>
 </main>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.12/typed.min.js" referrerpolicy="no-referrer"></script>
+<!--jQuery-->
+<script src="assets/jQuery/jquery-3.6.1.min.js"></script>
+<script src="assets/js/main.js"></script>
 </body>
 </html>
