--- a/index.html
+++ b/index.html
@@ -48,12 +48,15 @@
             <div>
                 <!--description-->
                 <aside>
-                    <h3>Hello !  I'm </h3>
+                    <h3>Hello , </h3>
+                    <h1><span>I'm a </span> Blogger | Software Engineer student</h1>
                     <h1>S<span class="typing"></span>|</h1>
-                    <h1><span>A</span> Web Designer & Developer | Blogger | Software Engineer student...</h1>
+                    <button>Hire Me
+                        <div><i class="fa-solid fa-circle-chevron-right"></i></div>
+                    </button>
                     <!--social images-->
                     <section>
-
+                        <h3>Find Me</h3>
                         <nav>
                             <div><a href="https://www.facebook.com/nowety.pasan" target="_blank"><i
                                     class="fa-brands fa-facebook-f"></i></a></div>
@@ -68,7 +71,7 @@
                         </nav>
                     </section>
                 </aside>
-
+                <!--image-->
                 <aside>
                     <div></div>
                 </aside>
@@ -76,12 +79,15 @@
         </section>
         <div></div>
         <div></div>
+        <!--        <div>-->
+        <!--            <img src="assets/img/DashLine.svg">-->
+        <!--        </div>-->
         <div></div>
     </section>
-</main>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.12/typed.min.js" referrerpolicy="no-referrer"></script>
 <!--jQuery-->
 <script src="assets/jQuery/jquery-3.6.1.min.js"></script>
 <script src="assets/js/main.js"></script>
+</main>
 </body>
 </html>
