--- a/index.html
+++ b/index.html
@@ -58,15 +58,11 @@
                     <section>
                         <h3>Find Me</h3>
                         <nav>
-                            <div><a href="https://www.facebook.com/nowety.pasan" target="_blank"><i
+                            <div><a href="https://web.facebook.com/profile.php?id=100089564455632" target="_blank"><i
                                     class="fa-brands fa-facebook-f"></i></a></div>
-                            <div><a href="https://www.instagram.com/_.shenux._/?hl=en" target="_blank"><i
-                                    class="fa-brands fa-instagram"></i></a></div>
-                            <div><a href="https://lk.linkedin.com/in/pasan-pahasara-356a75165" target="_blank"><i
+                            <div><a href="https://www.linkedin.com/in/sachini-vinodya-a11ba220a/" target="_blank"><i
                                     class="fa-brands fa-linkedin-in"></i></a></div>
-                            <div><a href="https://twitter.com/PasanPahasara" target="_blank"><i
-                                    class="fa-brands fa-twitter"></i></a></div>
-                            <div><a href="https://github.com/Pasan-Pahasara" target="_blank"><i
+                            <div><a href="https://github.com/sachinivindoya" target="_blank"><i
                                     class="fa-brands fa-github"></i></a></div>
                         </nav>
                     </section>
