--- a/index.html
+++ b/index.html
@@ -77,7 +77,17 @@
         <div></div>
         <div></div>
     </section>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.12/typed.min.js" referrerpolicy="no-referrer"></script>
+
+    <!--about -->
+    <section id="about">
+        <!--title-->
+        <section>
+            <h1>About Me</h1>
+        </section>
+        <div>
+
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.12/typed.min.js" referrerpolicy="no-referrer"></script>
 <!--jQuery-->
 <script src="assets/jQuery/jquery-3.6.1.min.js"></script>
 <script src="assets/js/main.js"></script>
