--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
             <li><a class="hover-line" href="#Edu">Edu & Work</a></li>
             <li><a class="hover-line" href="#skills">Skills</a></li>
             <li><a class="hover-line" href="#projects">Projects</a></li>
+            <li><a class="hover-line" href="#gallery">Gallery</a></li>
             <li><a class="hover-line" href="#contact">Contact</a></li>
         </ul>
     </nav>
@@ -84,10 +85,80 @@
         <section>
             <h1>About Me</h1>
         </section>
-        <div>
+        <section>
+            <div>
+                <!--image-->
+                <div>
+                    <img src="assets/image/Untitled (2).png">
+                </div>
+                <!--description-->
+                <aside>
+                    <h2>More About Myself</h2>
 
+                    <p>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.12/typed.min.js" referrerpolicy="no-referrer"></script>
+                        I am a software Engineer
+                        student at my age of
+                        21st from  <abbr
+                            title="Institute of Software Engineering">IJSE</abbr>.
+                        I choose to become a
+                        Software Engineer
+                        because of my endless
+                        curiosity about technologies
+                        I saw when I was a kid.
+                        now I am driven by  curiosity
+                        & proficient about JAVA , MYSQL , ANDROID & etc.
+                        I am a good team player & I have no problem with meeting challenges.
+                        I believe my ability to communicate clearly & my software engineering skills & other talents will make me an idol.
+                        I always believe & follow
+                        “ WITHOUT SACRIFICE , THERE’S NO WIN !”
+                    </p>
+                    <div>
+                        <div id="column1">
+                            <p>
+                                <i class="fa-solid fa-angle-right"></i>
+                                <strong>Name :</strong>
+                                <span>Sachini Vinodya</span>
+                            </p>
+                            <p>
+                                <i class="fa-solid fa-angle-right"></i>
+                                <strong>Age :</strong>
+                                <span>22 years old</span>
+                            </p>
+                            <p>
+                                <i class="fa-solid fa-angle-right"></i>
+                                <strong>Contact :</strong>
+                                <span>+94 75 494 4970</span>
+                            </p>
+                            <p>
+                                <i class="fa-solid fa-angle-right"></i>
+                                <strong>Blog :</strong>
+                                <span>Available</span>
+                            </p>
+                            <p>
+                                <i class="fa-solid fa-angle-right"></i>
+                                <strong>Location :</strong>
+                                <span>Kalutara,Sri Lanka</span>
+                            </p>
+                            <p>
+                                <i class="fa-solid fa-angle-right"></i>
+                                <strong>Education :</strong>
+                                <span>Undergraduate</span>
+                            </p>
+                        </div>
+
+                    </div>
+                    <div>
+                        <button>Download CV
+                            <div><i class="fa-solid fa-download"></i></div>
+                        </button>
+                    </div>
+                </aside>
+            </div>
+        </section>
+    </section>
+
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.12/typed.min.js" referrerpolicy="no-referrer"></script>
 <!--jQuery-->
 <script src="assets/jQuery/jquery-3.6.1.min.js"></script>
 <script src="assets/js/main.js"></script>
