--- a/index.html
+++ b/index.html
@@ -83,77 +83,62 @@
     <section id="about">
         <!--title-->
         <section>
-            <h4>About</h4>
             <h1>About Me</h1>
         </section>
         <div>
-            <img src="assets/image/About Section Cube.svg" >
+
         </div>
 
         <section>
             <div>
                 <!--image-->
                 <div>
-                    <img src="assets/image/Untitled%20(2).png" width="300">
+                    <img src="assets/image/Untitled (3).png" width="320">
                 </div>
                 <!--description-->
                 <aside>
-                    <h2>I am here with 1+ years of user experience</h2>
+                    <h2>I am Here !</h2>
 
-                    <p>I am a software engineering student at <abbr
-                            title="Institute of Software Engineering">IJSE</abbr> and
-                        currently completing my second semester. An enthusiastic
-                        student with highly motivated and studying Software Engineering at <abbr
-                                title="Institute of Software Engineering">IJSE</abbr>.</p>
+                    <p>
+                        I am a software Engineer
+                        student at my age of
+                        21st from <abbr
+                            title="Institute of Software Engineering">IJSE</abbr>.
+                        I choose to become a
+                        Software Engineer
+                        because of my endless
+                        curiosity about technologies
+                        I saw when I was a kid.
+                        now I am driven by  curiosity
+                        & proficient about JAVA , MYSQL , ANDROID & etc.
+                        I am a good team player & I have no problem with meeting challenges.
+                        I believe my ability to communicate clearly & my software engineering skills & other talents will make me an idol.
+                       </p>
 
-                    <p>Eager to learn new technologies and always willing to innovate the new things which can improve
-                        the
-                        existing technology. An easy-
-                        going person with a positive attitude and good team working ability.</p>
+                    <p> I always believe & follow
+                        “ WITHOUT SACRIFICE , THERE’S NO WIN !”</p>
 
                     <div>
                         <div id="column1">
                             <p>
                                 <i class="fa-solid fa-angle-right"></i>
                                 <strong>Name :</strong>
-                                <span>Pasan Pahasara</span>
+                                <span>Sachini Vinodya</span>
                             </p>
                             <p>
                                 <i class="fa-solid fa-angle-right"></i>
                                 <strong>Age :</strong>
-                                <span>21 years old</span>
+                                <span>22 </span>
                             </p>
                             <p>
                                 <i class="fa-solid fa-angle-right"></i>
                                 <strong>Contact :</strong>
-                                <span>+94 717133074</span>
-                            </p>
-                            <p>
-                                <i class="fa-solid fa-angle-right"></i>
-                                <strong>Freelancer :</strong>
-                                <span>Available</span>
+                                <span>+94 75 494 4970</span>
                             </p>
                             <p>
                                 <i class="fa-solid fa-angle-right"></i>
                                 <strong>Location :</strong>
-                                <span>Galle,Sri Lanka</span>
-                            </p>
-                            <p>
-                                <i class="fa-solid fa-angle-right"></i>
-                                <strong>Degree :</strong>
-                                <span>Undergraduate</span>
-                            </p>
-                        </div>
-                        <div id="column2">
-                            <p>
-                                <i class="fa-solid fa-angle-right"></i>
-                                <strong>Location :</strong>
-                                <span>Galle,Sri Lanka</span>
-                            </p>
-                            <p>
-                                <i class="fa-solid fa-angle-right"></i>
-                                <strong>Degree :</strong>
-                                <span>Undergraduate</span>
+                                <span>Kalutara,Sri Lanka</span>
                             </p>
                         </div>
                     </div>
@@ -167,12 +152,12 @@
         </section>
 
         <div>
-            <img id="aboutWave" src="assets/image/Wave.svg">
+           
         </div>
 
         <div></div>
         <div id="aboutCube2">
-            <img src="assets/image/About%20Section%20Cube.svg">
+
         </div>
     </section>
 
