--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                     <h3>Hello , </h3>
                     <h1><span>I'm a </span> Blogger | Software Engineer student</h1>
                     <h1>S<span class="typing"></span>|</h1>
-                    <button>Hire Me
+                    <button> Get CV
                         <div><i class="fa-solid fa-circle-chevron-right"></i></div>
                     </button>
                     <!--social images-->
