--- a/index.html
+++ b/index.html
@@ -122,6 +122,12 @@
         </section>
     </section>
 
+    <!-- education -->
+    <section>
+
+    </section>
+
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.12/typed.min.js" referrerpolicy="no-referrer"></script>
 <!--jQuery-->
 <script src="assets/jQuery/jquery-3.6.1.min.js"></script>
