--- a/index.html
+++ b/index.html
@@ -124,7 +124,27 @@
 
     <!-- education -->
     <section>
+        <h1>My Journey of Education</h1>
+        <ul>
+            <li style="--accent-color:#4CADAD">
+                <div class="date">2017</div>
+                <div class="title">GCE Ordinary Level - A6 C3</div>
+                <div class="descr">WP/KL/D.S.Senanayake Central College</div>
+               <div> <img src="assets/image/ds.png" width="100">  </div>
 
+            </li>
+            <li style="--accent-color:#FBCA3E">
+                <div class="date">2020</div>
+                <div class="title">GCE Advanced Level Examination - A1 B3</div>
+                <div class="descr">WP/KL/Gurulugomie Vidyalaya</div>
+                <div> <img src="assets/image/gmv.png" >  </div>
+            </li>
+            <li style="--accent-color:#E24A68">
+                <div class="date">2021</div>
+                <div class="title"> Undergraduate</div>
+                <div class="descr">IJSE - Institute of Software Engineering</div>
+                <div> <img src="assets/image/ijse.png" >  </div>
+        </ul>
     </section>
 
 
