--- a/index.html
+++ b/index.html
@@ -123,28 +123,36 @@
     </section>
 
     <!-- education -->
-    <section>
-        <h1>My Journey of Education</h1>
-        <ul>
-            <li style="--accent-color:#4CADAD">
-                <div class="date">2017</div>
-                <div class="title">GCE Ordinary Level - A6 C3</div>
-                <div class="descr">WP/KL/D.S.Senanayake Central College</div>
-               <div> <img src="assets/image/ds.png" width="100">  </div>
-
+    <section id="education">
+        <h1>UL timeline cards</h1>
+        <ul class="eduMenu">
+            <li style="--accent-color:#41516C">
+                <div class="date">2002</div>
+                <div class="title">Title 1</div>
+                <div class="descr">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quas itaque hic quibusdam fugiat est numquam harum, accusamus suscipit consequatur laboriosam!</div>
             </li>
             <li style="--accent-color:#FBCA3E">
-                <div class="date">2020</div>
-                <div class="title">GCE Advanced Level Examination - A1 B3</div>
-                <div class="descr">WP/KL/Gurulugomie Vidyalaya</div>
-                <div> <img src="assets/image/gmv.png" >  </div>
+                <div class="date">2007</div>
+                <div class="title">Title 2</div>
+                <div class="descr">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quos adipisci nobis nostrum vero nihil veniam.</div>
             </li>
             <li style="--accent-color:#E24A68">
-                <div class="date">2021</div>
-                <div class="title"> Undergraduate</div>
-                <div class="descr">IJSE - Institute of Software Engineering</div>
-                <div> <img src="assets/image/ijse.png" >  </div>
+                <div class="date">2012</div>
+                <div class="title">Title 3</div>
+                <div class="descr">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga minima consequuntur soluta placeat iure totam commodi repellendus ea delectus, libero fugit quod reprehenderit, sequi quo, et dolorum saepe nulla hic.</div>
+            </li>
+            <li style="--accent-color:#1B5F8C">
+                <div class="date">2017</div>
+                <div class="title">Title 4</div>
+                <div class="descr">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Impedit, cumque.</div>
+            </li>
+            <li style="--accent-color:#4CADAD">
+                <div class="date">2022</div>
+                <div class="title">Title 5</div>
+                <div class="descr">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Odit, non.</div>
+            </li>
         </ul>
+        <div class="credits"><a target="_blank" href="https://www.freepik.com/free-vector/infographic-template-with-yearly-info_1252895.htm">inspired by</a></div>
     </section>
 
 
