--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns="http://www.w3.org/1999/html">
 <head>
     <!--document meta data-->
     <meta charset="UTF-8">
@@ -124,35 +124,40 @@
 
     <!-- education -->
     <section id="education">
-        <h1>UL timeline cards</h1>
+       <div class="eduTitle"><h1>My Education Journey</h1></div>
         <ul class="eduMenu">
             <li style="--accent-color:#41516C">
-                <div class="date">2002</div>
-                <div class="title">Title 1</div>
-                <div class="descr">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quas itaque hic quibusdam fugiat est numquam harum, accusamus suscipit consequatur laboriosam!</div>
+                <div class="date">2017</div>
+                <div class="title">GCE Ordinary Level Examination - A6 C3</div>
+                <div><img src="assets/image/ds.png"></div>
+                <div class="descr"> WP/KL/ D.S.Senanayake Central College <br> Junior Prefect, Member of vollyball team etc.</div>
+
             </li>
             <li style="--accent-color:#FBCA3E">
-                <div class="date">2007</div>
-                <div class="title">Title 2</div>
-                <div class="descr">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quos adipisci nobis nostrum vero nihil veniam.</div>
+                <div class="date">2020</div>
+                <div class="title">GCE Advanced Level Examination</div>
+                <div><img src="assets/image/gmv.png"> </div>
+                <div class="descr">WP/KL/ Gurulugomie Vidyalaya <br>  best student in the class, Senior Prefect.</div>
             </li>
-            <li style="--accent-color:#E24A68">
-                <div class="date">2012</div>
-                <div class="title">Title 3</div>
-                <div class="descr">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga minima consequuntur soluta placeat iure totam commodi repellendus ea delectus, libero fugit quod reprehenderit, sequi quo, et dolorum saepe nulla hic.</div>
+            <li style="--accent-color:#7ecb79">
+                <div class="date">2021</div>
+                <div class="title">Best Achievement</div>
+                <div class="descr"> Passed Advanced Level with 1A & 3 B's with the rank of 398 in Kalutara Distric.<br>
+                    Selected to the one of Best University In Sri Lanka</div>
             </li>
             <li style="--accent-color:#1B5F8C">
-                <div class="date">2017</div>
-                <div class="title">Title 4</div>
-                <div class="descr">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Impedit, cumque.</div>
+                <div class="date">2021 May</div>
+                <div class="title">Turning Point</div>
+                <div class="descr">Choosing Software Engineering as My future Career because of insatiable desire.</div>
             </li>
             <li style="--accent-color:#4CADAD">
-                <div class="date">2022</div>
-                <div class="title">Title 5</div>
-                <div class="descr">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Odit, non.</div>
+                <div class="date">present</div>
+                <div class="title">Higher Education</div>
+                <div><img src="assets/image/ijse.png"></div>
+                <div class="descr">IJSE - Institute of Software Engineering<br> As a software engineering student I am eager to fulfill my reputation in IT industry</div>
             </li>
         </ul>
-        <div class="credits"><a target="_blank" href="https://www.freepik.com/free-vector/infographic-template-with-yearly-info_1252895.htm">inspired by</a></div>
+
     </section>
 
 
