--- a/index.html
+++ b/index.html
@@ -129,15 +129,15 @@
             <li style="--accent-color:#41516C">
                 <div class="date">2017</div>
                 <div class="title">GCE Ordinary Level Examination - A6 C3</div>
-                <div><img src="assets/image/ds.png"></div>
-                <div class="descr"> WP/KL/ D.S.Senanayake Central College <br> Junior Prefect, Member of vollyball team etc.</div>
+                <div class="imgScl"><img src="assets/image/ds.png"></div>
+                <div class="descr"> WP/KL/ D.S.Senanayake Central College <br> <br>Junior Prefect, Member of vollyball team etc.</div>
 
             </li>
             <li style="--accent-color:#FBCA3E">
                 <div class="date">2020</div>
                 <div class="title">GCE Advanced Level Examination</div>
-                <div><img src="assets/image/gmv.png"> </div>
-                <div class="descr">WP/KL/ Gurulugomie Vidyalaya <br>  best student in the class, Senior Prefect.</div>
+                <div class="imgScl"><img src="assets/image/gmv.png"> </div>
+                <div class="descr">WP/KL/ Gurulugomie Vidyalaya <br> <br> best student in the class, Senior Prefect.</div>
             </li>
             <li style="--accent-color:#7ecb79">
                 <div class="date">2021</div>
@@ -153,11 +153,10 @@
             <li style="--accent-color:#4CADAD">
                 <div class="date">present</div>
                 <div class="title">Higher Education</div>
-                <div><img src="assets/image/ijse.png"></div>
-                <div class="descr">IJSE - Institute of Software Engineering<br> As a software engineering student I am eager to fulfill my reputation in IT industry</div>
+                <div class="imgScl"><img src="assets/image/ijse.png"></div>
+                <div class="descr">IJSE - Institute of Software Engineering<br> <br>As a software engineering student I am eager to fulfill my reputation in IT industry</div>
             </li>
         </ul>
-
     </section>
 
 
