--- a/index.html
+++ b/index.html
@@ -158,8 +158,18 @@
             </li>
         </ul>
     </section>
+    <!-- skills-->
+    <section>
 
+    </section>
+    <!-- projects -->
+    <section>
 
+    </section>
+    <!-- contact -->
+    <section>
+
+    </section>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.12/typed.min.js" referrerpolicy="no-referrer"></script>
 <!--jQuery-->
 <script src="assets/jQuery/jquery-3.6.1.min.js"></script>
