--- a/index.html
+++ b/index.html
@@ -158,9 +158,13 @@
             </li>
         </ul>
     </section>
-    <!-- skills-->
-    <section>
 
+    <!-- skills-->
+
+    <section>
+    <div class="skillTitle">
+        <h1> Skills</h1>
+    </div>
     </section>
     <!-- projects -->
     <section>
