--- a/index.html
+++ b/index.html
@@ -165,6 +165,15 @@
     <div class="skillTitle">
         <h1> Skills</h1>
     </div>
+        <div class="SkillLogo">
+            <div> <img src="assets/image/skills/html.png"></div>
+            <div> <img src="assets/image/skills/css.png"></div>
+            <div> <img src="assets/image/skills/Javascript.png"></div>
+            <div> <img src="assets/image/skills/mysql.png"></div>
+            <div> <img src="assets/image/skills/java.png"></div>
+            <div> <img src="assets/image/skills/Python.png"></div>
+        </div>
+
     </section>
     <!-- projects -->
     <section>
