--- a/index.html
+++ b/index.html
@@ -166,16 +166,21 @@
         <h1> Skills</h1>
     </div>
         <div class="SkillLogo">
-            <div> <img src="assets/image/skills/html.png"></div>
-            <div> <img src="assets/image/skills/css.png"></div>
-            <div> <img src="assets/image/skills/Javascript.png"></div>
-            <div> <img src="assets/image/skills/mysql.png"></div>
-            <div> <img src="assets/image/skills/java.png"></div>
-            <div> <img src="assets/image/skills/Python.png"></div>
+            <div class="SkillImg"> <img src="assets/image/skills/html.png"></div>
+            <div class="SkillImg"> <img src="assets/image/skills/css.png"></div>
+            <div class="SkillImg"> <img src="assets/image/skills/Javascript.png"></div>
+            <div class="SkillImg"><img src="assets/image/skills/mysql.png"></div>
+            <div class="SkillImg"> <img src="assets/image/skills/java.png"></div>
+            <div class="SkillImg"><img src="assets/image/skills/Python.png"></div>
         </div>
 
     </section>
     <!-- projects -->
+    <section>
+
+    </section>
+
+    <!-- gallary -->
     <section>
 
     </section>
