create gallery structure

--- a/index.html
+++ b/index.html
@@ -180,10 +180,29 @@
 
     </section>
 
-    <!-- gallary -->
-    <section>
-
+    <!-- gallery -->
+    <section id="gallery">
+        <!--title-->
+        <section>
+            <h1>Gallery</h1>
+            <div></div>
+            <div></div>
+        </section>
+        <section>
+            <!--Grid Container-->
+            <section>
+                <div></div> <!--Grid Items-->
+                <div></div> <!--Grid Items-->
+                <div></div> <!--Grid Items-->
+                <div></div> <!--Grid Items-->
+                <div></div> <!--Grid Items-->
+                <div></div> <!--Grid Items-->
+                <div></div> <!--Grid Items-->
+                <div></div> <!--Grid Items-->
+            </section>
+        </section>
     </section>
+
     <!-- contact -->
     <section>
 
