--- a/index.html
+++ b/index.html
@@ -180,10 +180,12 @@
 
     </section>
 
-    <!-- gallery -->
+
+    <!--gallery sectioning-->
     <section id="gallery">
         <!--title-->
         <section>
+            <h4>Gallery</h4>
             <h1>Gallery</h1>
             <div></div>
             <div></div>
@@ -202,6 +204,7 @@
             </section>
         </section>
     </section>
+
 
     <!-- contact -->
     <section>
