statrt project section

--- a/index.html
+++ b/index.html
@@ -175,6 +175,9 @@
         </div>
     </section>
 
+    <!-- projects -->
+    <section id="projectsSectionMainParent">
+
     <!--gallery sectioning-->
     <section id="gallery">
         <!--title-->
