add group chat project

--- a/index.html
+++ b/index.html
@@ -177,7 +177,23 @@
 
     <!-- projects -->
     <section id="projectsSectionMainParent">
-
+        <span id="mainHeading">PROJECTS DONE BY ME</span>
+        <span id="subHeading">Hover over project icon to see details</span>
+        <div id="projectItemsContainer" class="reveal active">
+        <div class="projectItem">
+            <div class="iconsParent">
+                <img src="assets/image/project/chat.JPG">
+                <div class="description">
+                    <span> Group Chatting Application</span>
+                    <hr>
+                    <p> This is INP project using java socket programming and java fx.</p>
+                    <a href="https://github.com/sachinivindoya/groupChat" target="_blank"></a>
+                    <img src="assets/image/github.png">
+                </div>
+            </div>
+        </div>
+        </div>
+    </section>
     <!--gallery sectioning-->
     <section id="gallery">
         <!--title-->
