--- a/index.html
+++ b/index.html
@@ -176,12 +176,12 @@
         <div id="projectItemsContainer" class="reveal active">
             <div class="projectItem">
                 <div class="iconsParent">
-                    <img src="assets/image/project/chat.JPG">
+                    <img src="assets/image/project/chat (2).JPG">
                 </div>
                 <div class="desc">
                     <span> Group Chatting App</span>
                     <hr>
-                    <p> "This project is done for my second semester Introduction to Networking final project.
+                    <p> "This project is done for my second semester.
                         I used Java socket programming to develop this application"</p>
                     <a href="https://github.com/sachinivindoya/groupChat">
                         <img src="assets/image/github.png">
