--- a/index.html
+++ b/index.html
@@ -52,9 +52,7 @@
                     <h3>Hello , </h3>
                     <h1><span>I'm a </span> Blogger | Software Engineer student</h1>
                     <h1>S<span class="typing"></span>|</h1>
-                     <button> Get CV
-
-                    </button>
+                     <button> Get CV </button>
                     <!--social images-->
                     <section>
                         <h3>Find Me</h3>
@@ -164,9 +162,8 @@
         <span id="mainHeading">
             PROJECTS DONE BY ME
         </span>
-        <span id="subHeading">
-            Hover over project icon to see details
-        </span>
+        <br>
+
       <!--  <div id="categoryParent">
             <a id="typeAll" class onclick="typeAllClicked()">All</a>
             <a id="typeWeb" class onclick="typeWebClicked()">Web</a>
@@ -188,6 +185,21 @@
                     </a>
                 </div>
             </div>
+            <!-- second project -->
+            <div class="projectItem">
+                <div class="iconsParent">
+                    <img src="assets/image/project/gym1.JPG">
+                </div>
+                <div class="desc">
+                    <span> Gym Management System</span>
+                    <hr>
+                    <p> "This project is done for my first semester.
+                        I used Java , javaFx programming to develop this application"</p>
+                    <a href="https://github.com/sachinivindoya/groupChat">
+                        <img src="assets/image/github.png">
+                    </a>
+                </div>
+            </div>
         </div>
         <div id="projectItemControllers">
             <img src="./assets/image/next.png" onclick="leftScrollButtonClicked()"
@@ -196,6 +208,7 @@
             <img src="./assets/image/next.png" onclick="rightScrollButtonClicked()"
                  class="slideButtons" id="nextButton" alt="">
         </div>
+        <div>   <button> View Assignments </button></div>
     </section>
     <!--gallery sectioning-->
     <section id="gallery">
