--- a/index.html
+++ b/index.html
@@ -200,6 +200,21 @@
                     </a>
                 </div>
             </div>
+            <!-- third project -->
+            <div class="projectItem">
+                <div class="iconsParent">
+                    <img src="assets/image/project/hostel1.JPG">
+                </div>
+                <div class="desc">
+                    <span> Hostel Management System</span>
+                    <hr>
+                    <p> "This project is done for my second semester.
+                        I used Hibernate,javaFx, Java programming to develop this application"</p>
+                    <a href="https://github.com/sachinivindoya/groupChat">
+                        <img src="assets/image/github.png">
+                    </a>
+                </div>
+            </div>
         </div>
         <div id="projectItemControllers">
             <img src="./assets/image/next.png" onclick="leftScrollButtonClicked()"
