--- a/pages/Assignment.html
+++ b/pages/Assignment.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Assignments in IT module</title>
+    <meta content="width=device-width initial-scale=1 maximum-scale=1 minimum-scale=1 user-scalable=no" name="viewport">
 </head>
 <body>
 
