--- a/pages/Assignment.html
+++ b/pages/Assignment.html
@@ -4,8 +4,11 @@
     <meta charset="UTF-8">
     <title>Assignments in IT module</title>
     <meta content="width=device-width initial-scale=1 maximum-scale=1 minimum-scale=1 user-scalable=no" name="viewport">
+    <link rel="stylesheet" href="assets/style/assignment.css">
+    <link rel="stylesheet" href="assets/style/normalize.css">
 </head>
 <body>
+
 
 </body>
 </html>
