--- a/pages/Assignment.html
+++ b/pages/Assignment.html
@@ -8,7 +8,13 @@
     <link rel="stylesheet" href="assets/style/normalize.css">
 </head>
 <body>
-
+<main>
+    <!--Assignments-->
+    <section>
+        <!--Assignment topic-->
+        <div>
+            <h1 id="proTopic">Assignments</h1>
+        </div>
 
 </body>
 </html>
