add 1st assignment

--- a/pages/Assignment.html
+++ b/pages/Assignment.html
@@ -15,6 +15,18 @@
         <div>
             <h1 id="proTopic">Assignments</h1>
         </div>
-
+        <!--Adding section-->
+        <section id="projectSect">
+            <!--Assignment 1-->
+            <div>
+                <h2 id="Assignment1">Beginning </h2>
+                <img id="1-img" src="../pages/assets/images/assignment1.JPG" alt="">
+                <div id="1-div">
+                    <p id="1-p">"This includes my very first beginning to web development. In this I've learned how to gather requirements,
+                        wireframe,siteMap and prototype.You can find those things related to my digital resume"</p>
+                    <a href="https://drive.google.com/drive/folders/1t5gRbmblEzpky3limGvKuKWyynU0jwYC?usp=drive_link" target="_blank">
+                        <button id="1-view">View</button></a>
+                </div>
+            </div>
 </body>
 </html>
