--- a/pages/Assignment.html
+++ b/pages/Assignment.html
@@ -28,5 +28,16 @@
                         <button id="1-view">View</button></a>
                 </div>
             </div>
+
+            <!--Assignment 2-->
+            <div>
+                <h2 id="Assignment2">Wireframe </h2>
+                <img id="2-img" src="../pages/assets/images/assignment 2.JPG" alt="">
+                <div id="2-div">
+                    <p id="2-p"> "This assignment includes more practice about wireframe I got. "</p>
+                    <a href="https://drive.google.com/file/d/1ZSF8RU-U1SmwdBN9QH9sO_PRki1Sq48x/view" target="_blank">
+                        <button id="2-view">View</button></a>
+                </div>
+            </div>
 </body>
 </html>
