adding 3rd assignment

--- a/pages/Assignment.html
+++ b/pages/Assignment.html
@@ -42,11 +42,22 @@
 
             <!--Assignment 2-->
             <div>
-                <h2 id="Assignment3">Wireframe </h2>
-                <img id="3-img" src="../pages/assets/images/assignment2.JPG" alt="">
-                <div id="3-div">
-                    <p id="3-p"> "This helped me to get basic understand about basic HTML. We implement our websites structure using HTML "</p>
+                <h2 id="Assignment2.1">HTML </h2>
+                <img id="2.1-img" src="../pages/assets/images/assignment2.JPG" alt="">
+                <div id="2.1-div">
+                    <p id="2.1-p"> "This helped me to get basic understand about basic HTML. We implement our websites structure using HTML "</p>
                     <a href="https://drive.google.com/file/d/126Lj9LEYGAEmUzE1p0be8Qdv7HLe7PKz/view" target="_blank">
+                        <button id="2.1-view">View</button></a>
+                </div>
+            </div>
+
+            <!--Assignment 3-->
+            <div>
+                <h2 id="Assignment3">CSS </h2>
+                <img id="3-img" src="../pages/assets/images/assignment3.JPG" alt="">
+                <div id="3-div">
+                    <p id="3-p"> "CSS is a incredible way to do decorating websites. In here we practiced some decorations and terms in CSS "</p>
+                    <a href="https://github.com/sachinivindoya/IJSE_IT_Assignment03" target="_blank">
                         <button id="3-view">View</button></a>
                 </div>
             </div>
