adding 4th assignment

--- a/pages/Assignment.html
+++ b/pages/Assignment.html
@@ -61,5 +61,16 @@
                         <button id="3-view">View</button></a>
                 </div>
             </div>
+
+            <!--Assignment 4-->
+            <div>
+                <h2 id="Assignment4">CSS Animation </h2>
+                <img id="4-img" src="../pages/assets/images/assignment4.JPG" alt="">
+                <div id="4-div">
+                    <p id="4-p"> "In this we learned how to do animations with using CSS keyframes."</p>
+                    <a href="https://github.com/sachinivindoya/Assignment04" target="_blank">
+                        <button id="4-view">View</button></a>
+                </div>
+            </div>
 </body>
 </html>
